Ajuste no service discovery

--- a/service-discovery/src/main/resources/application.properties
+++ b/service-discovery/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=service-discovery
 
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
+
+eureka.instance.hostname=${spring.application.name}
+eureka.client.service-url.defaultZone=http://${spring.application.name}:${server.port}/eureka/
