--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,18 +77,29 @@ services:
      - service-discovery
     networks:
      - app-network
-  nginx:
-    image: nginx:latest
-    container_name: nginx
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   ports:
+  #    - "80:80"
+  #   volumes:
+  #    - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #    - demo1
+  #    - demo2
+  #   networks:
+  #    - app-network
+  rabbitmq:
+    image: "rabbitmq:4.1.4-management"
+    container_name: rabbitmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin
     ports:
-     - "80:80"
-    volumes:
-     - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-     - demo1
-     - demo2
+      - "5672:5672"
+      - "15672:15672"
     networks:
-     - app-network
+      - app-network
 networks:
   app-network:
     driver: bridge
